# haskell-quaternion

./: LICENSE  Quaternion.hs  README.md  haskell-quaternion.cabal
src/: Quaternion.hs
