name:                haskell-quaternion
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ricardobonna/haskell-quaternion#readme
license:             MIT
license-file:        LICENSE
author:              Ricardo Bonna
maintainer:          ricardobonna@gmail.com
copyright:           2018 Ricardo Bonna
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Quaternion
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ricardobonna/haskell-quaternion
